Try to clean up afterwards
To keep the eventual docker image as small
as possible.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -39,3 +39,28 @@
     dest: /etc/profile.d/java_home.sh
     mode: 0644
   when: java_home is defined and java_home
+
+
+# 
+# Clean up
+# 
+# To try and trim down the final docker image
+# 
+- name: "remove man"
+  apt:
+    name: man
+    state: absent
+    autoclean: true
+    autoremove: true
+    purge: true
+    install_recommends: false
+
+- name: "Clean-up"
+  shell: "rm -rf /var/lib/apt/lists/* \
+    && rm -Rf /usr/share/doc && rm -Rf /usr/share/man"
+
+- name: apt clean
+  shell: apt-get clean
+
+- name: "Empty tmp"
+  shell: "rm -rf /tmp/*"
