Attempt to keep the image’s layers small
When building a Docker image with ansible-container

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,25 @@
 ---
+#
+# Update 
+#
+# To try and trim down the final docker image
+#
+- name: Update and upgrade apt packages
+  become: true
+  apt:
+    upgrade: true
+    update_cache: true
+    cache_valid_time: 3600
+    autoremove: true
+    autoclean: true
+    install_recommends: false
+
+
+#
+# Vanilla steps
+#
+# This files original steps before I started hacking
+#
 - name: Include OS-specific variables for Fedora or FreeBSD.
   include_vars: "{{ ansible_distribution }}.yml"
   when: ansible_distribution == 'FreeBSD' or ansible_distribution == 'Fedora'
@@ -41,26 +62,13 @@
   when: java_home is defined and java_home
 
 
-# 
+#
 # Clean up
-# 
+#
 # To try and trim down the final docker image
-# 
-- name: "remove man"
-  apt:
-    name: man
-    state: absent
-    autoclean: true
-    autoremove: true
-    purge: true
-    install_recommends: false
-
+#
 - name: "Clean-up"
-  shell: "rm -rf /var/lib/apt/lists/* \
-    && rm -Rf /usr/share/doc && rm -Rf /usr/share/man"
-
-- name: apt clean
-  shell: apt-get clean
+  shell: "rm -Rf /usr/share/doc && rm -Rf /usr/share/man"
 
 - name: "Empty tmp"
   shell: "rm -rf /tmp/*"
